# backend/Routes/api/examSyllabus.routes.js
@@ -2,7 +2,7 @@ import express from 'express'
 const router=express.Router()
 import {addSyllabus,deleteExamSyllabus,editSyllabus,getExamSyllabus} from '../../Controllers/ExamSyllabus.Controller.js'
 
-router.get('/',getExamSyllabus)
+router.get('/:category',getExamSyllabus)
 router.post('/delete',deleteExamSyllabus)
 router.post('/edit',editSyllabus)
 router.post('/',addSyllabus)
